objects/CEE_Location_Holiday__c.object
<CustomObject>
    <fields>
        <fullName>CEE_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>this field is used to store location id</description>
        <label>CEE Location</label>
        <referenceTo>CEE_Location__c</referenceTo>
        <relationshipLabel>CEE Location Holidays</relationshipLabel>
        <relationshipName>CEE_Location_Holidays</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Holiday_Date__c</fullName>
        <description>this field has holiday date</description>
        <label>Holiday Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>This field has Year list</description>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>This object will store all holiday llist for each location for current yer</description>
    <label>CEE Location Holiday</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CEE Location Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CEE_Location__c</columns>
        <columns>Holiday_Date__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>